# otterm

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
docs/superpowers/plans/: 2026-07-22-lifeguard.md
docs/superpowers/specs/: 2026-07-22-lifeguard-design.md
shell/: otterm.zsh
src/: banner.rs  capture.rs  fleet.rs  main.rs  serve.rs  store.rs  ws.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
web/: den.css  watch.html
web/wterm/core/: index.js  terminal-core.js  transport.js  wasm-bridge.js  wasm-inline.js
web/wterm/dom/: debug.js  index.js  input.js  renderer.js  wterm.js
